Solved bug - footer responsivity on mobile

--- a/style.css
+++ b/style.css
@@ -207,6 +207,7 @@ button {
   justify-content: flex-end;
   flex-direction: column;
   gap: 14px;
+  align-items: flex-end;
 }
 
 .button-container {
@@ -303,7 +304,12 @@ h6 {
     width: 100%;
   }
 
-  .contact-me-button {
+  .button-custom-light {
+    margin: 12px 0px;
+    width: 100%;
+  }
+
+  .button-custom-dark {
     margin: 12px 0px;
     width: 100%;
   }
@@ -317,13 +323,16 @@ h6 {
   }
 
   #hero-text {
-    margin: 24px 0px;
-    padding: 36px 12px 0px 12px !important;
+    padding: 36px 20px 0px 20px !important;
   }
 
   .button-socials {
     display: flex;
     justify-content: space-between;
+  }
+
+  .hero-section {
+    gap: 20px;
   }
 
   .card--wrapper {
